[WIP] Update JRE 8 -> 21.0.3, Scala 2.12.10 -> 3.4.2, sbt 1.2.8 -> 1.10.0